--- a/styles.css
+++ b/styles.css
@@ -198,6 +198,10 @@ ul.list-unstyled.d-flex.gap-3.mb-0 li:hover {
   color: var(--strong-cyan);
 }
 
+footer {
+  margin-top: 9.375rem;
+}
+
 .footer-links-grid {
   display: grid;
   max-width: 31em;
